--- a/app.json
+++ b/app.json
@@ -41,6 +41,11 @@
       "description": "Optional: Force Sub message of bot, use HTML parsemode format",
       "value": "Hello {first}\n\n<b>You need to join in my Channel/Group to use me\n\nKindly Please join Channel</b>"
     },
+    "AUTH_ID": {
+      "description": "A space separated list of user_ids of AUTHED USERS, they can USE create links",
+      "value": "",
+      "required": false
+    },
     "ADMINS": {
       "description": "A space separated list of user_ids of Admins, they can only create links",
       "value": "",
