--- a/app.json
+++ b/app.json
@@ -33,6 +33,10 @@
       "description": "id of the channel or group, if you want enable force sub feature else put 0",
       "value": "0"
     },
+    "AUTH_MESSAGE":{
+      "description": "User authorization Info",
+      "value": "Hello {first}\n\n<b>You need to join in my Channel/Group to use me\n\nKindly Please join Channel</b>")"
+    },
     "START_MESSAGE": {
       "description": "Optional: start message of bot, use HTML parsemode format",
       "value": "Hello {first}\n\nI can store private files in Specified Channel and other users can access it from special link."
