--- a/app.json
+++ b/app.json
@@ -35,7 +35,7 @@
     },
     "AUTH_MESSAGE":{
       "description": "User authorization Info",
-      "value": "Hello {first}\n\n<b>You need to join in my Channel/Group to use me\n\nKindly Please join Channel</b>")"
+      "value": "Hello {first}\n\n<b>You need to be authorized to be get the files from me\n\nKindly Please Click on Authorization Info button to know how to get authorized to the bot</b>"
     },
     "START_MESSAGE": {
       "description": "Optional: start message of bot, use HTML parsemode format",
